--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,53 +1,120 @@
-html {
-    font-family: 'Roboto', sans-serif;
+@font-face {
+  font-family: "strawfordblack";
+  src: url("../fonts/strawford-black-webfont.eot");
+  src: url("../fonts/strawford-black-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/strawford-black-webfont.woff2") format("woff2"), url("../fonts/strawford-black-webfont.woff") format("woff"), url("../fonts/strawford-black-webfont.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
 }
-
-h1 {
-    font-weight: 300;
+@font-face {
+  font-family: "strawfordbold";
+  src: url("../fonts/strawford-bold-webfont.eot");
+  src: url("../fonts/strawford-bold-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/strawford-bold-webfont.woff2") format("woff2"), url("../fonts/strawford-bold-webfont.woff") format("woff"), url("../fonts/strawford-bold-webfont.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
 }
-
-div {
-    user-select: none;
-    -webkit-user-select: none;
+@font-face {
+  font-family: "strawfordmedium";
+  src: url("../fonts/strawford-medium-webfont.eot");
+  src: url("../fonts/strawford-medium-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/strawford-medium-webfont.woff2") format("woff2"), url("../fonts/strawford-medium-webfont.woff") format("woff"), url("../fonts/strawford-medium-webfont.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
 }
-
-.header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-    color: white;
-    font-weight: 300;
-    height: 20em;
+@font-face {
+  font-family: "strawfordregular";
+  src: url("../fonts/strawford-regular-webfont.eot");
+  src: url("../fonts/strawford-regular-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/strawford-regular-webfont.woff2") format("woff2"), url("../fonts/strawford-regular-webfont.woff") format("woff"), url("../fonts/strawford-regular-webfont.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
 }
-
+@font-face {
+  font-family: "strawfordthin";
+  src: url("../fonts/strawford-thin-webfont.eot");
+  src: url("../fonts/strawford-thin-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/strawford-thin-webfont.woff2") format("woff2"), url("../fonts/strawford-thin-webfont.woff") format("woff"), url("../fonts/strawford-thin-webfont.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "strawfordlight";
+  src: url("../fonts/strawford-light-webfont.eot");
+  src: url("../fonts/strawford-light-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/strawford-light-webfont.woff2") format("woff2"), url("../fonts/strawford-light-webfont.woff") format("woff"), url("../fonts/strawford-light-webfont.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "strawfordextralight";
+  src: url("../fonts/strawford-extralight-webfont.eot");
+  src: url("../fonts/strawford-extralight-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/strawford-extralight-webfont.woff2") format("woff2"), url("../fonts/strawford-extralight-webfont.woff") format("woff"), url("../fonts/strawford-extralight-webfont.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "geomanistblack";
+  src: url("../fonts/geomanist-black-webfont.eot");
+  src: url("../fonts/geomanist-black-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/geomanist-black-webfont.woff2") format("woff2"), url("../fonts/geomanist-black-webfont.woff") format("woff"), url("../fonts/geomanist-black-webfont.ttf") format("truetype"), url("../fonts/geomanist-black-webfont.svg#geomanistregular") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
 body {
-    background-color: #272B32;
-    overflow: hidden;
-    font-size: large;
+  background-color: #131313;
 }
 
-.image {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-    animation: rotation 20s infinite linear; 
-    height: auto;
-    overflow: hidden;
-    pointer-events: none;
-    user-select: none;
-    /* -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -o-user-select: none; */
+/* highlight color */
+::-moz-selection {
+  background-color: #ffffff62;
+}
+::selection {
+  background-color: #ffffff62;
 }
 
+::-moz-selection {
+  background: #ffffff62;
+  /* Gecko Browsers */
+}
+
+.title-container {
+  color: #ffffff;
+  display: flex;
+  justify-content: center;
+  margin-top: 35px;
+  margin-bottom: 30px;
+  font-family: "strawfordbold", sans-serif;
+  font-size: 30px;
+}
+
+.image-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
+.image-container img {
+  -webkit-animation: rotation 20s infinite linear;
+          animation: rotation 20s infinite linear;
+  height: 300px;
+  pointer-events: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+/* -webkit-user-select: none;
+-khtml-user-select: none;
+-moz-user-select: none;
+-o-user-select: none; */
+@-webkit-keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
 @keyframes rotation {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
-}
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}/*# sourceMappingURL=styles.css.map */
