--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -35,9 +35,14 @@ body {
     img {
         animation: rotation 20s infinite linear; 
         height: 300px;
+        @media screen and (max-width: 1500px){
+            // height: 100px;
+        }
+        @media screen and (max-width: 480px){
+               // height: 50px;
+        }
         pointer-events: none;
         user-select: none;
-
     }
 }
     /* -webkit-user-select: none;
