--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -55,7 +55,9 @@
   font-style: normal;
 }
 body {
-  background-color: #131313;
+  background-color: #22272E;
+  font-family: "strawfordbold", sans-serif;
+  color: #AEBAC7;
 }
 
 /* highlight color */
@@ -71,13 +73,104 @@ body {
   /* Gecko Browsers */
 }
 
+#dialogWrap {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#mainDialog {
+  margin: 20px;
+  overflow: hidden;
+  text-align: left;
+  display: flex;
+  flex-direction: column;
+}
+
+#passArea {
+  display: flex;
+  flex-direction: column;
+}
+
+#passwordPrompt {
+  font-size: 20px;
+}
+
+#password-line {
+  display: flex;
+}
+
+#pass {
+  color: #AEBAC7;
+  background-color: inherit;
+  border: none;
+  border-bottom: 5px solid #AEBAC7;
+  width: 200px;
+  height: 40px;
+  font-size: 25px;
+}
+
+#pass:focus {
+  outline: none;
+}
+
+#invalidPass {
+  color: #B35B65;
+}
+
+#success {
+  color: #7aba69;
+}
+
+#submitPass {
+  color: #AEBAC7;
+  font-size: 20px;
+  margin-left: 20px;
+  margin-right: 1px;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  border: solid gray 1px;
+  background: none;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+#contentFrame {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.bottom-message {
+  font-size: 20px;
+  margin-top: 30px;
+}
+
+.error, .notifyText {
+  display: none;
+  color: #B35B65;
+}
+
+#blank-placeholder {
+  display: block;
+}
+
 .title-container {
-  color: #ffffff;
   display: flex;
   justify-content: center;
   margin-top: 35px;
   margin-bottom: 30px;
-  font-family: "strawfordbold", sans-serif;
   font-size: 30px;
 }
 
@@ -97,10 +190,6 @@ body {
       -ms-user-select: none;
           user-select: none;
 }
-/* -webkit-user-select: none;
--khtml-user-select: none;
--moz-user-select: none;
--o-user-select: none; */
 @-webkit-keyframes rotation {
   from {
     transform: rotate(0deg);
@@ -116,4 +205,66 @@ body {
   to {
     transform: rotate(360deg);
   }
+}
+.list-title-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 35px;
+  font-family: "strawfordbold";
+}
+.list-title-container h1 {
+  font-size: 60px;
+}
+
+.smiley {
+  margin: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bolder;
+  font-size: 35px;
+}
+
+.list-container {
+  display: flex;
+  font-family: "strawfordmedium";
+  font-size: 24px;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
+.list-container ul {
+  list-style-type: none;
+}
+.list-container ul li:not(:last-child) {
+  margin-bottom: 13px;
+}
+.list-container ul li:first-of-type {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+.heading-icon:first-of-type {
+  margin-right: 9px;
+  margin-left: -1px;
+}
+
+.heading-icon:last-of-type {
+  margin-right: 25px;
+}
+
+.checkbox:first-of-type {
+  margin-right: 13px;
+}
+
+.checkbox:last-of-type {
+  margin-right: 25px;
+}
+
+.heading-icon, .checkbox {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }/*# sourceMappingURL=styles.css.map */
