--- a/assets/styles/_password.scss
+++ b/assets/styles/_password.scss
@@ -68,7 +68,7 @@
     width: 35px;
     height: 35px;
     border-radius: 50%;
-    border: solid gray 1px;
+    border: solid globals.$github-almostwhite 1px;
     background: none;
     cursor: pointer;
     user-select: none;
