--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -135,7 +135,7 @@ body {
   width: 35px;
   height: 35px;
   border-radius: 50%;
-  border: solid gray 1px;
+  border: solid #AEBAC7 1px;
   background: none;
   cursor: pointer;
   -webkit-user-select: none;
