--- a/assets/styles/_globals.scss
+++ b/assets/styles/_globals.scss
@@ -1,6 +1,9 @@
-$github-bg-gray: #22272E;
-$github-lighter-gray: #2D333B;
-$github-almostwhite: #AEBAC7;
-$github-bordergray: #444C56;
 $vs-red: #B35B65;
-$green: #7aba69;
+$off-black: #1e1f26;
+$pale-teal: #517b78;
+$brighter-teal: #69bfb9;
+$light-grey: #bdbdbd;
+$laptop-15: 1440px;
+$laptop-13: 1280px;
+$tablet-width: 768px;
+$mobile-width: 480px;
