--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -48,235 +48,737 @@
   font-style: normal;
 }
 @font-face {
-  font-family: "geomanistblack";
-  src: url("../fonts/geomanist-black-webfont.eot");
-  src: url("../fonts/geomanist-black-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/geomanist-black-webfont.woff2") format("woff2"), url("../fonts/geomanist-black-webfont.woff") format("woff"), url("../fonts/geomanist-black-webfont.ttf") format("truetype"), url("../fonts/geomanist-black-webfont.svg#geomanistregular") format("svg");
+  font-family: "NotoSans";
+  src: url("../fonts/NotoSansTC-Regular.woff2");
+  src: url("../fonts/NotoSansTC-Regular.otf");
   font-weight: normal;
   font-style: normal;
 }
-body {
-  background-color: #22272E;
-  font-family: "strawfordbold", sans-serif;
-  color: #AEBAC7;
+@font-face {
+  font-family: "NotoSansBlack";
+  src: url("../fonts/NotoSansTC-Black.woff2");
+  src: url("../fonts/NotoSansTC-Black.otf");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "NotoSansBold";
+  src: url("../fonts/NotoSansTC-Bold.woff2");
+  src: url("../fonts/NotoSansTC-Bold.otf");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "NotoSansMedium";
+  src: url("../fonts/NotoSansTC-Medium.woff2");
+  src: url("../fonts/NotoSansTC-Medium.otf");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "NotoSansLight";
+  src: url("../fonts/NotoSansTC-Light.woff2");
+  src: url("../fonts/NotoSansTC-Light.otf");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "NotoSansThin";
+  src: url("../fonts/NotoSansTC-Thin.woff2");
+  src: url("../fonts/NotoSansTC-Thin.otf");
+  font-weight: normal;
+  font-style: normal;
+}
+html {
+  font-size: initial;
 }
 
 /* highlight color */
 ::-moz-selection {
-  background-color: #ffffff62;
+  background-color: rgba(255, 255, 255, 0.3843137255);
 }
 ::selection {
-  background-color: #ffffff62;
+  background-color: rgba(255, 255, 255, 0.3843137255);
 }
 
-::-moz-selection {
-  background: #ffffff62;
-  /* Gecko Browsers */
+body {
+  color: white;
+  background-color: black;
+  font-family: "strawfordregular", "NotoSans", sans-serif;
+  transition: background-color 1.4s ease;
+  margin: 0;
+  text-align: center;
+  line-height: 1.618;
 }
 
-#dialogWrap {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+h2 {
+  font-size: 60px;
+  font-family: "strawfordbold";
+}
+@media screen and (max-width: 480px) {
+  h2 {
+    font-size: 48px;
+  }
 }
 
-#mainDialog {
-  margin: 20px;
-  overflow: hidden;
-  text-align: left;
-  display: flex;
-  flex-direction: column;
-}
-
-#passArea {
-  display: flex;
-  flex-direction: column;
-}
-
-#passwordPrompt {
-  font-size: 20px;
-}
-
-#password-line {
-  display: flex;
-}
-
-#pass {
-  color: #AEBAC7;
-  background-color: inherit;
-  border: none;
-  border-bottom: 5px solid #AEBAC7;
-  width: 200px;
-  height: 40px;
-  font-size: 25px;
-}
-
-#pass:focus {
-  outline: none;
-}
-
-#invalidPass {
-  color: #B35B65;
-}
-
-#success {
-  color: #7aba69;
-}
-
-#submitPass {
-  color: #AEBAC7;
-  font-size: 20px;
-  margin-left: 20px;
-  margin-right: 1px;
-  width: 35px;
-  height: 35px;
-  border-radius: 50%;
-  border: solid #AEBAC7 1px;
-  background: none;
-  cursor: pointer;
+img {
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
 }
 
-#contentFrame {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+a {
+  color: #ffffff;
+  text-decoration: none;
 }
 
-.bottom-message {
-  font-size: 20px;
-  margin-top: 30px;
-}
-
-.error, .notifyText {
-  display: none;
-  color: #B35B65;
-}
-
-#blank-placeholder {
-  display: block;
-}
-
-.title-container {
+.panel {
+  min-height: 100vh;
   display: flex;
   justify-content: center;
-  margin-top: 35px;
-  margin-bottom: 30px;
+  align-items: center;
+  width: 100vw;
 }
-.title-container h1 {
-  text-align: center;
-  width: 600px;
-  font-size: 40px;
+
+nav {
+  position: fixed;
+  z-index: 100;
+  width: 100%;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  display: flex;
+  justify-content: flex-end;
+  padding: 0;
+  margin: 0;
+  background-color: transparent;
+  transition: transform 300ms;
+  font-family: "strawfordmedium";
+}
+nav.hide {
+  transform: translateY(-100%);
 }
 @media screen and (max-width: 480px) {
-  .title-container h1 {
-    font-size: 30px;
+  nav {
+    display: none;
+  }
+}
+
+.navbar {
+  list-style-type: none;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  border: 2.4px solid white;
+  border-radius: 32px;
+  padding: 5px 5px;
+  margin: 10px;
+  background-color: #ffffff;
+}
+.navbar li {
+  display: inline-block;
+  margin: 0 6px;
+  padding: 0;
+}
+
+.hash-link {
+  font-size: 14px;
+  color: #517b78;
+}
+
+.id-heading {
+  background-color: #517b78;
+}
+
+#intro {
+  justify-content: center;
+  align-items: center;
+}
+
+.intro-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 900px;
+}
+@media screen and (max-width: 480px) {
+  .intro-wrapper {
+    width: 400px;
+    flex-direction: column;
+    margin-top: -130px;
+  }
+}
+
+header {
+  display: block;
+  width: 640px;
+  margin-right: 10%;
+  line-height: 1.1;
+  text-align: center;
+}
+@media screen and (max-width: 480px) {
+  header {
+    width: 400px;
+    font-size: 10px;
+    margin-right: 0px;
+  }
+}
+header span {
+  display: block;
+  text-align: center;
+  font-family: "strawfordbold";
+  font-size: 100px;
+}
+header p {
+  margin-top: 15px;
+  font-size: 12px;
+  text-align: center;
+}
+@media screen and (max-width: 480px) {
+  header p {
+    font-size: 10px;
+    margin: 30px 0px;
+  }
+}
+
+.profile-pic {
+  display: block;
+  height: 300px;
+  width: 300px;
+  padding: 0;
+  margin: 0;
+  border: solid white 3px;
+  border-radius: 50%;
+}
+@media screen and (max-width: 480px) {
+  .profile-pic {
+    height: 200px;
+    width: 200px;
+  }
+}
+
+.id-about {
+  background-color: #1e1f26;
+}
+
+#about {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+#about h2 {
+  margin-bottom: 70px;
+}
+@media screen and (max-width: 480px) {
+  #about h2 {
+    margin-bottom: 40px;
+  }
+}
+
+.about-text-wrapper {
+  width: 1152px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+@media screen and (max-width: 480px) {
+  .about-text-wrapper {
+    width: 200px;
+    flex-direction: column;
+  }
+}
+
+.about-text {
+  display: block;
+  width: 370px;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  margin-right: 90px;
+  text-align: justify;
+  font-size: 16px;
+  font-family: "strawfordregular";
+}
+@media screen and (max-width: 480px) {
+  .about-text {
+    width: 300px;
+    margin-right: 0px;
+    margin-bottom: 40px;
+    line-height: 1.4;
+  }
+}
+
+.about-text::before {
+  content: "";
+  display: block;
+  background-color: #69bfb9;
+  width: 22%;
+  height: 6px;
+  border-radius: 13px;
+  margin-bottom: 20px;
+}
+
+.cubing-pic {
+  width: 380px;
+  border-radius: 33px;
+  border: 2px solid white;
+}
+@media screen and (max-width: 480px) {
+  .cubing-pic {
     width: 300px;
   }
 }
 
-.image-container {
+.id-skills {
+  background-color: #1e1f26;
+}
+
+.skills-wrapper {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  align-content: center;
 }
-.image-container img {
-  -webkit-animation: rotation 20s infinite linear;
-          animation: rotation 20s infinite linear;
-  height: 300px;
-  pointer-events: none;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-}
-
-@-webkit-keyframes rotation {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media screen and (max-width: 480px) {
+  .skills-wrapper {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
 }
 
-@keyframes rotation {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-.list-title-container {
+.skills-intro-wrapper {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 35px;
-  font-family: "strawfordbold";
+  flex-direction: column;
+  margin-right: 40px;
 }
-.list-title-container h1 {
-  font-size: 60px;
+@media screen and (max-width: 480px) {
+  .skills-intro-wrapper {
+    margin-right: 45px;
+    margin-bottom: 40px;
+  }
+}
+.skills-intro-wrapper h2 {
+  margin-top: 0px;
+  margin-bottom: 0px;
+  text-align: left;
 }
 
-.smiley {
-  margin: 20px;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: bolder;
-  font-size: 35px;
+.skills-intro {
+  font-size: 16px;
+  text-align: left;
+  width: 230px;
 }
 
-.list-container {
+.skills-intro::before {
+  content: "";
+  display: block;
+  background-color: #69bfb9;
+  width: 50%;
+  height: 5px;
+  border-radius: 13px;
+  margin: 15px 0px;
+}
+
+.skills-list-wrapper {
   display: flex;
+  flex-direction: row;
+}
+
+.skills-list {
   font-family: "strawfordmedium";
-  font-size: 24px;
-  justify-content: center;
-  align-items: center;
-  align-content: center;
-}
-.list-container ul {
+  color: #69bfb9;
+  font-size: 19px;
   list-style-type: none;
+  text-align: left;
+  margin-right: 40px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
 }
-.list-container ul li:not(:last-child) {
-  margin-bottom: 13px;
+
+/**************************/
+/* Old Skills section that I changed */
+#experience {
+  flex-direction: column;
 }
-.list-container ul li:first-of-type {
+
+.id-experience {
+  background-color: #1e1f26;
+}
+
+.experience-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.experience-top-bar {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 800px;
+}
+@media screen and (max-width: 480px) {
+  .experience-top-bar {
+    width: 100px;
+    justify-content: center;
+  }
+}
+
+.pdf-button {
+  font-family: "strawfordbold";
+  font-size: 23px;
+  padding: 7px 27px;
+  border-radius: 3rem;
+  background-color: #517b78;
+  transition: transform 0.5s ease;
+}
+@media screen and (max-width: 480px) {
+  .pdf-button {
+    font-size: 13px;
+    padding: 4px 15px;
+    margin-left: 25px;
+  }
+}
+
+.pdf-button:hover, .pdf-button:focus {
+  transform: scale(1.05);
+}
+
+.experience-list-wrapper {
+  display: flex;
+  flex-direction: row;
+}
+@media screen and (max-width: 480px) {
+  .experience-list-wrapper {
+    flex-direction: column;
+  }
+}
+
+.experience-label-list {
+  list-style: none;
+  text-align: left;
+  padding-left: 0px;
+}
+@media screen and (max-width: 480px) {
+  .experience-label-list {
+    display: flex;
+    flex-direction: row;
+  }
+}
+
+.experience-label {
+  font-family: "strawfordmedium";
+  font-size: 18px;
+  margin-bottom: 20px;
+  transition: transform 0.4s ease;
+}
+@media screen and (max-width: 480px) {
+  .experience-label {
+    font-size: 14px;
+    margin-bottom: 0px;
+    margin-right: 20px;
+  }
+}
+
+.experience-label:hover, .experience-label:focus {
+  transform: scale(1.05);
+  cursor: pointer;
+}
+@media screen and (max-width: 480px) {
+  .experience-label:hover, .experience-label:focus {
+    transform: none;
+  }
+}
+
+.experience-divider {
+  width: 5px;
+  height: 250px;
+  background-color: white;
+  border-radius: 13px;
+  margin: 0px 50px;
+}
+@media screen and (max-width: 480px) {
+  .experience-divider {
+    width: 150px;
+    height: 5px;
+    margin: 0px;
+    margin-bottom: 30px;
+    margin-top: 20px;
+  }
+}
+
+.experience-item {
+  text-align: left;
+  display: none;
+  -webkit-animation: fadeDiv 700ms ease-in-out both;
+          animation: fadeDiv 700ms ease-in-out both;
+  transform: none;
+  margin-top: 0px;
+  padding-top: 0px;
+}
+.experience-item h4 {
+  font-family: "strawfordmedium";
+  font-size: 27px;
+  color: #69bfb9;
+  margin: 0px;
+}
+.experience-item p {
+  font-family: "strawfordlight";
+  font-size: 15px;
+  margin: 0px;
+}
+.experience-item ul {
+  list-style: disc;
+  list-style-position: outside;
+  padding-left: 20px;
+  padding-top: 10px;
+  width: 500px;
+  height: 180px;
+}
+@media screen and (max-width: 480px) {
+  .experience-item ul {
+    width: 300px;
+  }
+}
+.experience-item li {
+  color: #69bfb9;
+}
+.experience-item span {
+  display: block;
+  color: white;
+  font-size: 17px;
+  padding-left: 10px;
+}
+.experience-item a {
+  color: #69bfb9;
+}
+
+#it-desk-label {
+  color: #69bfb9;
+}
+
+#it-desk {
+  display: block;
+}
+
+@-webkit-keyframes fadeColor {
+  from {
+    color: white;
+  }
+  to {
+    color: #69bfb9;
+  }
+}
+
+@keyframes fadeColor {
+  from {
+    color: white;
+  }
+  to {
+    color: #69bfb9;
+  }
+}
+@-webkit-keyframes fadeDiv {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes fadeDiv {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+.id-projects {
+  background-color: #1e1f26;
+}
+
+#projects {
+  flex-direction: column;
+}
+
+.project-list-container {
+  width: 1100px;
+  display: flex;
+  justify-content: center;
+}
+@media screen and (max-width: 480px) {
+  .project-list-container {
+    width: 300px;
+  }
+}
+
+.project-list {
+  list-style: none;
+  padding: 0px;
+  margin: none;
+}
+@media screen and (max-width: 480px) {
+  .project-list {
+    display: flex;
+    flex-direction: row;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    height: 400px;
+  }
+}
+
+.project-panel {
+  display: inline-flex;
+  flex-direction: column;
+  align-content: center;
+  align-items: flex-start;
+  padding-left: 22px;
+  border-top: 3px solid white;
+  border-left: 3px solid white;
+  border-top-left-radius: 38px;
+  margin: 10px;
+  margin-bottom: 20px;
+  height: 273px;
+  width: 245px;
+  transition: transform 0.5s ease, color 0.5s;
+  color: white;
+}
+@media screen and (max-width: 480px) {
+  .project-panel {
+    width: 300px;
+  }
+}
+
+.project-panel:hover, .project-panel:focus {
+  transform: scale(1.04);
+  color: #69bfb9;
+}
+
+.project-title {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+.project-title img {
+  width: 24px;
+  margin-right: 16px;
+}
+@media screen and (max-width: 480px) {
+  .project-title img {
+    width: 15px;
+  }
+}
+.project-title p {
+  font-family: "strawfordmedium";
+  font-size: 18.5px;
+  text-overflow: wrap;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+@media screen and (max-width: 480px) {
+  .project-title p {
+    font-size: 15px;
+  }
+}
+
+.project-text {
+  font-family: "strawfordlight";
+  font-size: 15px;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  width: 90%;
+  text-align: left;
+}
+@media screen and (max-width: 480px) {
+  .project-text {
+    font-size: 13px;
+  }
+}
+
+.project-bottom {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-self: center;
+  margin-top: auto;
+  width: 100%;
+}
+.project-bottom img {
+  width: 20px;
+  height: 20px;
+  margin-right: 16px;
+  margin-bottom: -4px;
+}
+.project-bottom p {
+  color: #bdbdbd;
+  font-size: 13px;
+  flex-basis: 100%;
+  text-align: left;
+}
+
+/*****************************/
+/* Old carousel that I changed */
+/*****************************/
+.id-contact {
+  background-color: #517b78;
+}
+
+.contact-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+.contact-wrapper h2 {
+  margin: 20px;
+}
+
+.get-in-touch {
+  font-size: 16px;
+  margin-bottom: 20px;
+}
+
+.links-list {
+  list-style-type: none;
+  padding-left: 0;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
 }
-
-.heading-icon:first-of-type {
-  margin-right: 9px;
-  margin-left: -1px;
+.links-list li {
+  display: inline-block;
+  margin: 13px;
+  transition: transform 0.4s ease;
+}
+.links-list li:hover, .links-list li:focus, .links-list li:active {
+  transform: scale(1.12);
 }
 
-.heading-icon:last-of-type {
-  margin-right: 25px;
+.email-link img {
+  height: 40px;
+  margin-bottom: 3.2px;
 }
 
-.checkbox:first-of-type {
-  margin-right: 13px;
+.youtube-link img {
+  height: 56px;
+  margin-bottom: -4.8px;
 }
 
-.checkbox:last-of-type {
-  margin-right: 25px;
-}
-
-.heading-icon, .checkbox {
+.footer-text {
+  font-family: "strawfordmedium";
+  font-size: 13px;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
-}/*# sourceMappingURL=styles.css.map */
+}
