updated experience section

--- a/assets/styles/_experience.scss
+++ b/assets/styles/_experience.scss
@@ -164,12 +164,12 @@
 }
 
 //all experience-labels are white, except for the first one
-#it-desk-label {
+#mt-bank-label {
     color: globals.$brighter-teal;
 }
 
 //all experience-items are display:none, except for the first one
-#it-desk {
+#mt-bank {
     display: block;
 }
 
