--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -555,11 +555,11 @@ header p {
   color: #69bfb9;
 }
 
-#it-desk-label {
+#mt-bank-label {
   color: #69bfb9;
 }
 
-#it-desk {
+#mt-bank {
   display: block;
 }
 
