--- a/assets/styles/_header.scss
+++ b/assets/styles/_header.scss
@@ -48,8 +48,10 @@ header {
 
     //quote
     p {
-        margin-top: 15px;
-        font-size: 12px;
+        // margin-top: 15px; // for when there's a proper quote 
+        margin-top: 0px;
+        // font-size: 12px; // for when there's a proper quote 
+        font-size: 20px;
         text-align: center;
 
         @media screen and (max-width: globals.$mobile-width) {
